# cours-manticore

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  _quarto.yml  docker-compose.routing.yml  docker-compose.yml  files.txt  index.qmd  lisez-moi.txt  postgres-pgrouting.Dockerfile  pyproject.toml  rclone.conf.example  todo.md
corriges/: bonus.qmd  phase_1.qmd  phase_2.qmd  phase_3.qmd
docs/: contenu_donnees.md  instructor_guide.md
mission/: 00_briefing.md  briefing.md  briefing.qmd  checkpoint_2.qmd  debriefing.md  debriefing.qmd  index.qmd  phase_1.qmd  phase_1_reconnaissance.md  phase_2.qmd  phase_2_cartographie.md  phase_3.qmd  phase_3_simulation.md  transition_1_2.qmd  transition_2_3.qmd
notebooks/: retex.ipynb
pages/: _mermaid-fix.css
plans/: manticore-v2-todo.md  theory-outline.md
reference/: instructeur.qmd  scripts.qmd  setup.qmd
roles/: attaque.qmd  defense.qmd  ravitaillement.qmd
scripts/: 00_setup.py  01_explore_postgis.py  02_migrate_to_neo4j.py  03_routing_pgrouting.py  04_benchmark_comparison.py  _generated_tables.md  admin_extract_epci_data.py  admin_generate_gold_dumps.py  data_pull.sh  data_push.sh  fix_list_blank_lines.py  generate_theory_stats.py  zip_source.sh
site/: Gemfile  _config.yml  index.md
slides/: postgis.qmd  sql_recursion.qmd  theorie_bdd_nosql.md
tests/: conftest.py  test_bonus_sql.py  test_phase1_cypher.py  test_phase1_sql.py  test_phase2_cypher.py  test_phase2_sql.py  test_phase3_cypher.py  test_phase3_sql.py
theorie/: index.qmd
validation/: README.md  validate_role.sh  (+1 more)
(+627 files in other folders)
