[project]
name = "cours-manticore"
version = "0.1.0"
description = "Opération Manticore — Cours bases de données non-relationnelles"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary",
    "geopandas",
    "pandas",
    "pyarrow",
    "shapely",
    "neo4j",
    "python-dotenv",
    "matplotlib",
    "duckdb>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "notebook",
    "ipykernel",
    "pytest>=8",
    "pytest-xdist",
]

[tool.pytest.ini_options]
markers = [
    "skip_template: query has unresolved placeholders",
    "needs_gold_dumps: requires pgRouting ways table",
    "needs_neo4j: requires Neo4j connection",
]
